# diagrams-graphviz

./: .gitignore  .travis.yml  CHANGES.markdown  LICENSE  README.markdown  diagrams-graphviz.cabal
.github/workflows/: haskell-ci.yml
src/Diagrams/TwoD/: GraphViz.hs
test/: GraphvizTest.hs
