name:                diagrams-graphviz
version:             1.3.0.0
synopsis:            Graph layout and drawing with GrahpViz and diagrams
description:         XXX
homepage:            http://projects.haskell.org/diagrams/
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           Brent Yorgey 2014,2015
category:            Graphics
build-type:          Simple
extra-source-files:  README.markdown, CHANGES.markdown
cabal-version:       >=1.10

library
  exposed-modules:     Diagrams.TwoD.GraphViz
  other-extensions:    FlexibleContexts, MultiParamTypeClasses, NoMonomorphismRestriction
  build-depends:       base >=4.6 && <4.9,
                       diagrams-lib >= 1.3 && < 1.4,
                       graphviz >= 2999.17 && < 2999.18,
                       fgl >= 5.5 && < 5.6
  hs-source-dirs:      src
  default-language:    Haskell2010